Try counter update 3 times

--- a/.github/workflows/update_counter.yaml
+++ b/.github/workflows/update_counter.yaml
@@ -11,5 +11,7 @@ jobs:
       - name: Update the counter
         run: |
           ./update_counter.sh
+          ./update_counter.sh
+          ./update_counter.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
