--- a/.github/workflows/update_counter.yaml
+++ b/.github/workflows/update_counter.yaml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '*/5 * * * *'
 
+permissions:
+  contents: write
+
 jobs:
   update-counter:
     runs-on: ubuntu-latest
@@ -16,5 +19,5 @@ jobs:
           ./update_counter.sh
           ./update_counter.sh
           ./update_counter.sh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
