update counter more times

--- a/.github/workflows/update_counter.yaml
+++ b/.github/workflows/update_counter.yaml
@@ -19,5 +19,9 @@ jobs:
           ./update_counter.sh
           ./update_counter.sh
           ./update_counter.sh
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ./update_counter.sh
+          ./update_counter.sh
+          ./update_counter.sh
+          ./update_counter.sh
+          ./update_counter.sh
+          ./update_counter.sh
